--- a/setup.json.template
+++ b/setup.json.template
@@ -5,6 +5,7 @@
   "SLEEPSECONDS" : 30,
   "PORT" : 7999,
   "PUSHGATEWAY" : "",
+  "PUSHGATEWAY_JOBNAME" : "",
   "LOCATION" : "UB-1",
   "BUFFERSIZE" : 220,
   "READSPEED" : 9600,
@@ -20,6 +21,7 @@
   "SLEEPSECONDS" : 30,
   "PORT" : 0,
   "PUSHGATEWAY" : "localhost:9091",
+  "PUSHGATEWAY_JOBNAME" : "batchA",
   "LOCATION" : "UB-1",
   "BUFFERSIZE" : 220,
   "READSPEED" : 9600,
